prod/access-control-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-control-backend
spec:
  selector:
    matchLabels:
      app: access-control-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: access-control-backend
    spec:
      containers:
      - name: access-control-backend
        image: danielneset/bachelor-access-control-backend:prod-694236f4761c5a946a4f792aff02b922e5b2aaec
        ports:
        - containerPort: 8080
          protocol: TCP
