prod/access-control-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-control-frontend
spec:
  selector:
    matchLabels:
      app: access-control-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: access-control-frontend
    spec:
      containers:
      - name: access-control-frontend
        image: danielneset/bachelor-access-control-frontend:prod-web-11f7b517c55acb9ed9a55ff4a924cacfa969138a
        ports:
        - containerPort: 3000
          protocol: TCP
