prod/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
spec:
  selector:
    matchLabels:
      app: consumer
  replicas: 1
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: danielneset/bachelor-consumer:6c6f2647440f64ffa64dd364ca7ef835750c9813
        ports:
        - containerPort: 3000
          protocol: TCP
