prod/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: danielneset/bachelor-gateway:prod-cea787cacb1ffa843986693d1b8ddefdb96f7c7f
        ports:
        - name: http
          containerPort: 8080
        - name: grpc
          containerPort: 9090
