prod/producer-rest-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producerrestapi
spec:
  selector:
    matchLabels:
      app: producerrestapi
  replicas: 1
  template:
    metadata:
      labels:
        app: producerrestapi
    spec:
      containers:
      - name: producerrestapi
        image: danielneset/bachelor-producer-rest-api:prod-1f63f541afd5047901efa1b0b2cb53f5579ec1b1
        ports:
        - containerPort: 8080
          protocol: TCP
