prod/rest-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi
spec:
  selector:
    matchLabels:
      app: restapi
  replicas: 1
  template:
    metadata:
      labels:
        app: restapi
    spec:
      containers:
      - name: restapi
        image: danielneset/bachelor-rest-api:prod-5b9134c0a70b250052bc0b7554d6e7397c8d7d1a
        ports:
        - containerPort: 8080
          protocol: TCP
