prod/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
      - name: websocket
        image: danielneset/bachelor-websocket:prod-5d448d5a344ccc44951f2f69dd2e77acf2408485
        ports:
          - containerPort: 8080
            name: http
