prod/access-control-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-control-frontend-service
spec:
  selector:
    app: access-control-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
