prod/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
spec:
  selector:
    app: consumer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
