prod/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: ClusterIP
  selector:
    app: envoy
  ports:
    - name: grpc-web
      port: 80
      targetPort: 8080
