prod/grpc-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcapi-service
spec:
  selector:
    app: grpcapi
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
